--- a/app/src/main/res/layout/fragment_contradiction.xml
+++ b/app/src/main/res/layout/fragment_contradiction.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.ptb.length.involutecalculator.ContradictionFragment">
+             tools:context="com.ptb.length.involutecalculator.controller.ContradictionFragment">
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:orientation="vertical"
                   android:layout_width="match_parent"
