involute edit text is ok

--- a/app/src/main/res/layout/fragment_value_fixed.xml
+++ b/app/src/main/res/layout/fragment_value_fixed.xml
@@ -9,6 +9,7 @@
                     android:layout_marginLeft="8dp">
         
         <LinearLayout
+                android:id="@+id/valueEditsLayout"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -23,105 +24,105 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="20dp"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/teethNumberValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    />
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/normalModuleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/transverseModuleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/axialModuleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/baseModuleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/normalPressureAngleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/PressureAngleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/helixAngleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/leadAngleValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/referenceDiameterValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:inputType="numberDecimal"
-                    android:ems="10"
-                    android:id="@+id/baseDiameterValueText"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical|right"
-                    android:cursorVisible="false"/>
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/teethNumberValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/normalModuleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/transverseModuleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/axialModuleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/baseModuleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/normalPressureAngleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/PressureAngleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/helixAngleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/leadAngleValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/referenceDiameterValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
+            <!--<EditText-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:inputType="numberDecimal"-->
+                    <!--android:ems="10"-->
+                    <!--android:id="@+id/baseDiameterValueText"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:gravity="center_vertical|right"-->
+                    <!--android:cursorVisible="false"/>-->
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
