--- a/app/src/main/res/layout/fragment_contradiction.xml
+++ b/app/src/main/res/layout/fragment_contradiction.xml
@@ -7,7 +7,7 @@
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
-                  android:layout_marginLeft="8dp">
+                  android:layout_marginLeft="8dp" android:id="@+id/contradictionLayout">
         
         <TextView
                 android:text="@string/contradiction"
