--- a/app/src/main/res/layout/fragment_value_fixed.xml
+++ b/app/src/main/res/layout/fragment_value_fixed.xml
@@ -14,8 +14,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
-                android:layout_toLeftOf="@+id/linearLayout2"
-                android:layout_toStartOf="@+id/linearLayout2">
+                android:layout_toLeftOf="@+id/fixedLinerlayout"
+                android:layout_toStartOf="@+id/fixedLinerlayout">
             <TextView
                     android:text="@string/value"
                     android:layout_width="wrap_content"
@@ -129,7 +129,7 @@
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
-                android:id="@+id/linearLayout2"
+                android:id="@+id/fixedLinerlayout"
                 android:gravity="center_horizontal">
             <TextView
                     android:text="@string/fixed"
